# model_parser_mcp

./: .env  Cargo.toml  Dockerfile  README.md  build_docker.sh
.sqlx/: query-9bb857d9a051113af3e111b2d48194b5ff3780f9205a9813018d80a30bc6aa51.json  query-c694cc12adb66d48497823de7136363cb64ab5273a40ea498d587a6eacf91bbf.json
src/: main.rs  model_parser_tool.rs
src/model/: app_state.rs  config.rs  cubs_model.rs  database_util.rs  element_graph.rs  element_graph_parser.rs  element_parser.rs  mod.rs  model_dict.rs  model_error.rs  model_parser.rs  parser.rs  utils.rs
