[package]
name = "model-parser-mcp"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version="0.12.23", features=["json"]}
rmcp = { version="0.7.0", features = [
    "server",
    "macros",
    "client",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }
schemars = "1.0.4"
serde = { version= "1.0.228", features=["derive"]}
serde_json = "1.0.145"
tokio = { version="1.47.1", features=[
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
tracing-subscriber = { version="0.3.20", features = [
    "env-filter",
    "std",
    "fmt",
] }
axum = { version = "0.8", features = ["macros"] }
tokio-util = { version = "0.7" }
tracing = "0.1"
dotenv = "0.15.0"
sqlx =  { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
quick_cache = "0.6.17"
flate2 = "1.1.4"
uuid = "1.18.1"
mini-moka = "0.10.3"


